fixed position login + add givenName to header

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,2 +1,4 @@
-<a [routerLink]="[ venueId, 'orders' ]"   routerLinkActive="selected">Orders</a>
-<a [routerLink]="[ venueId, 'products' ]" routerLinkActive="selected">Products</a>
+<ng-container *ngIf="venueId$ | async as venueId">
+    <a [routerLink]="[ venueId, 'orders' ]"   routerLinkActive="selected">Orders</a>
+    <a [routerLink]="[ venueId, 'products' ]" routerLinkActive="selected">Products</a>
+</ng-container>
