--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<app-login *ngIf="login$ | async"></app-login>
