--- a/src/app/components/order-list/order-list.component.html
+++ b/src/app/components/order-list/order-list.component.html
@@ -1,3 +1,3 @@
-<p>
-  order-list works!
-</p>
+<ng-container *ngIf="(orders$ | async) as orders">
+  <div class="order" *ngFor="let order of orders">{{formatCounter(order.counter)}}</div>
+</ng-container>
