--- a/src/app/components/order-list/order-list.component.html
+++ b/src/app/components/order-list/order-list.component.html
@@ -1,3 +1,3 @@
 <ng-container *ngIf="(orders$ | async) as orders">
-  <div class="order" *ngFor="let order of orders">{{formatCounter(order.counter)}}</div>
+  <app-order-list-item *ngFor="let order of orders" [order]="order"></app-order-list-item>
 </ng-container>
