--- a/src/app/components/order-list-item/order-list-item.component.css
+++ b/src/app/components/order-list-item/order-list-item.component.css
@@ -1,4 +1,5 @@
-:host {
+a {
+    display: block;
     font-size: 1em;
     padding: .5em;
     margin: .1em;
@@ -6,4 +7,5 @@
     background-color: rgba(20,20,50, 0.2);
     border: .1em solid #555;
     border-radius: 1em;
+    text-decoration: none;
 }
