restful requests + handle order events

--- a/src/app/components/order-editor-item/order-editor-item.component.html
+++ b/src/app/components/order-editor-item/order-editor-item.component.html
@@ -1,4 +1,4 @@
-<div class="check">{{done ? "&#x2713;" : "&#10007;"}}</div>
+<div class="check" *ngIf="order.state == 'PREPARING'">{{done ? "&#x2713;" : "&#10007;"}}</div>
 <div class="productName">{{productName$ | async}}</div>
 <div class="portionName">{{portionName$ | async}} x {{count}}</div>
 <div class="price">{{priceAmount$ | async}} {{priceCurrency$ | async}}</div>
